--- a/package.json
+++ b/package.json
@@ -12,7 +12,16 @@
     "gulp": "^3.8.8",
     "gulp-sass": "^0.7.3",
     "browser-sync": "^1.3.7",
-    "gulp-autoprefixer": "1.0.0"
+    "gulp-autoprefixer": "1.0.0",
+    "gulp-ruby-sass": "~0.7.1",
+    "gulp-pleeease": "~1.1.0",
+    "rename": "~0.2.3",
+    "gulp-sourcemaps": "~1.2.8",
+    "gulp-rename": "~1.2.0",
+    "gulp-postcss": "~3.0.0",
+    "autoprefixer-core": "~4.0.2",
+    "css-mqpacker": "~2.0.0",
+    "csswring": "~2.0.0"
   },
   "repository": {
     "type": "git",
