--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "gulp-concat": "~2.4.2",
     "gulp-notify": "~2.1.0",
     "del": "~1.1.1",
-    "psi": "~0.1.6"
+    "psi": "~0.1.6",
+    "gulp-svg2png": "~0.3.0"
   },
   "repository": {
     "type": "git",
