--- a/_config.yml
+++ b/_config.yml
@@ -170,11 +170,11 @@ defaults:
 # -----------------------------------------------------------------------------
 
 sass:
-  sass_dir:
+  sass_dir: _scss
   # The load path for Sass imports. This folder must only contain imports!
   # Read more: http://jekyllrb.com/docs/assets/
 
-  style:
+  style: :expanded
     # Sass output settings. ! Read more:
     # http://web-design-weekly.com/2014/06/15/different-sass-output-styles/
 
@@ -239,7 +239,7 @@ safe: true
 # Serving
 # -----------------------------------------------------------------------------
 
-port:
+port: 2222
 # Change port if you are working on multiple Jekyll sites at once
 
 # -----------------------------------------------------------------------------
