--- a/_config.yml
+++ b/_config.yml
@@ -29,11 +29,11 @@
 # SITE PERSONALIZATION
 # -----------------------------------------------------------------------------
 
-name: RhythmKits
+name: RhythmKit
 # This text will be used on the homepage to personalize the name of your site
 # This will also act as a text link that always points to the homepage
 
-tagline: Let's find the rhythm for setting type online
+tagline: Set some FUCKING type!
 # This will show up in the header next to the site logo
 #Job training for young creatives
 
